# librouge

./: CMakeLists.txt  README.md
cmake/: glm.cmake  librougeConfig.cmake  sdl2.cmake
cmake/toolchain/: emscripten.toolchain
core/: CMakeLists.txt
core/include/r/: direction.h  engine.h  fov.h  gamestate.h  keys.h  line.h  rect.h  vec.h  vector2.h
core/include/r/frontend/: base.h  renderer.h  sdl.h  terminal.h
core/src/: engine.cpp  line.cpp  random.cpp
core/src/frontend/: renderer.cpp  sdl.cpp  terminal.cpp  terminal_unix.cpp  terminal_win32.cpp
include/r/: actionqueue.h  astar.h  color.h  direction.h  engine.h  fov.h  gamestate.h  line.h  random.h  rect.h  vector2.h
include/r/frontend/: renderer.h  sdl.h  terminal.h
src/: engine.cpp  line.cpp
src/frontend/: renderer.cpp  sdl.cpp  sdl_font.cpp  terminal.cpp
template/: CMakeLists.txt
template/src/: main.cpp
ui/: CMakeLists.txt
ui/include/r/ui/: element.h  horizontal.h  label.h  layout.h  panel.h  root.h  vertical.h
ui/src/: element.cpp  horizontal.cpp  label.cpp  layout.cpp  panel.cpp  root.cpp  vertical.cpp
